[gd_scene load_steps=3 format=3]

[ext_resource type="Texture2D" path="res://assets/mahjong-tileset/128/tile.png" id="1"]
[ext_resource type="Script" path="res://scripts/ui/tile_display.gd" id="2"]

[node name="Tile" type="TextureButton"]
custom_minimum_size = Vector2(64, 90)
texture_normal = ExtResource( 1)
ignore_texture_size = true
stretch_mode = 0
script = ExtResource(2)

[node name="Highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.835294, 0, 0.294118)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
